--- a/Nm_new_phase_3.ipynb
+++ b/Nm_new_phase_3.ipynb
@@ -103,7 +103,7 @@
         "id": "ZH9zwOpjSf7E",
         "outputId": "5eb92574-42f2-48ee-f565-d9a286c6b8a9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1883,7 +1883,7 @@
         "id": "J9dXvYIQiFdl",
         "outputId": "da7138f1-4e1f-42b4-cc68-2a598eeb03e3"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1933,13 +1933,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Bxm1bl5sjmFJ",
         "outputId": "6534bfce-cb44-493d-e7ad-1d135d1d0a40"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2045,7 +2044,7 @@
         "id": "hKFdShE9l3TT",
         "outputId": "05f9d821-c3d5-421d-9506-6105aae74308"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2115,7 +2114,7 @@
         },
         "outputId": "4d2b56fb-681b-47e5-a37b-031506e1d3ee"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2173,7 +2172,7 @@
         "id": "q70W1gAssmxD",
         "outputId": "7844e7fc-bee7-483d-c717-f15a7446d4a3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
